# locate-locale

./: .project  Cargo.toml  LICENSE  README.md
examples/: main.rs
src/: lib.rs  unix.rs  windows.rs
