[package]
name = "locate-locale"
version = "0.1.0"
authors = ["Serhii Plyhun <snuk188@gmail.com>"]
keywords = ["locale", "os", "language", "interface", "graphics"]
description = "A cross-platform default locale getter"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/snuk182/locate-locale.git"
homepage = "https://github.com/snuk182/locate-locale"

[lib]
name = "locate_locale"
path = "src/lib.rs"

[target.'cfg(target_os = "windows")'.dependencies]
kernel32-sys = "~0.2"

